--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/r0ehre/personal-website/issues"
   },
-  "homepage": "https://github.com/r0ehre/personal-website#readme"
+  "homepage": "https://github.com/r0ehre/personal-website#readme",
+  "dependencies": {
+    "express": "^4.16.2"
+  }
 }
